test/ui/invalid_item_type.stderr
error: The attribute can only be applied to struct or enum definitions.
 --> test/ui/invalid_item_type.rs:3:1
  |
3 | #[serde_option]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `serde_option` (in Nightly builds, run with -Z macro-backtrace for more info)
