test/ui/invalid_item_type.rs
use serde_option::serde_option;

#[serde_option]
const FOO: usize = 42;

fn main() {}
